--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
     <h1 id="title">freeCodeCamp Survey Form</h1>
     <p id ="description">Thank you for taking the time to help us improve the platform</p>
     <form id ="survey-form">
-
-      
+      <label>
+        name:
+        <input id="name" required type="text">
+      </label>
+      <label>
+        email:
+        <input id="email" required type="email">
+      </label>
+      <label>
+        age(optional):
+        <input id="number" min="0" max="120" type="number">
+      </label>
     </form>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
