--- a/index.html
+++ b/index.html
@@ -41,7 +41,62 @@
         <input name="recommendation" type="radio" value="Maybe">Maybe</input>
         <input name="recommendation" type="radio" value="Not sure">Not sure</input>
       </label>
+        <p>
+          What would you like to see improved? (Check all that apply)
 
+        </p>
+      <label>
+        Front-end Projects
+        <input type="checkbox" name="Front-end Projects" value="Front-end Projects">
+      </label>
+      <label>
+        Back-end Projects
+        <input type="checkbox" name="Back-end Projects" value="Back-end Projects">
+      </label>
+      <label>
+        Data visualization
+        <input type="checkbox" name="Data visualization" value="Data visualization">
+      </label>
+      <label>
+       Challenges
+        <input type="checkbox" name="Challenges" value="Challenges">
+      </label>
+      <label>
+        Open source community
+         <input type="checkbox" name="Open source community" value="Open source community">
+       </label>
+       <label>
+        Gitter help rooms
+         <input type="checkbox" name="Gitter help rooms" value="Gitter help rooms">
+       </label>
+       <label>
+        Videos
+         <input type="checkbox" name="Videos" value="Videos">
+       </label>
+       <label>
+        City Meetups
+         <input type="checkbox" name="City Meetups" value="City Meetups">
+       </label>
+       <label>
+        Wiki
+         <input type="checkbox" name="Wiki" value="Wiki">
+       </label>
+       <label>
+        Forum
+         <input type="checkbox" name="Forum" value="Forum">
+       </label>
+       <label>
+        Additional Courses
+
+         <input type="checkbox" name="Additional Courses" value="Additional Courses">
+       </label>
+      <label>
+        Any comments or suggestions?
+        <textarea name="text-area" id="text-area" cols="30" rows="10">
+
+        </textarea>
+      </label>
+      <button id="submit" type="submit" >Submit</button>
     </form>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
